# refmap-psychoacoustics

./: .Rhistory  .gitignore  Manifest.toml  Project.toml  Python.gitignore  README.md  citation.cff  findSequenceIndices.m  pyproject.toml  pyproject2.toml  pyproject_.toml
refmap-psychoacoustics/: pyproject.toml
res/Subfunctions/: shmAuditoryFiltBank.m  shmNoiseRedLowPass.m  shmOutMidEarFilter.m  shmRoughLowPass.m  shmRoughWeight.m
src/: refmap.jl
src/R/: avg_predictions_hybrid.R  cv_glmm_gee.R  glmgee_vif.R  refmap_listest1_analysis_corrplot.R
src/R/notebooks/: refmap_exp2_analysis_tost.Rmd  refmap_listest1_analysis.Rmd  refmap_listest1_analysis.nb.html  refmap_listest1_analysis2.Rmd  refmap_listest1_analysis2.nb.html  refmap_listest1_analysis_Bayesian_models.Rmd  refmap_listest1_analysis_Inter-noise2025.Rmd  refmap_listest1_analysis_cforest.Rmd  refmap_listest1_analysis_cforest.nb.html  refmap_listest1_analysis_cforest_PtA.Rmd  refmap_listest1_analysis_cforest_PtA.nb.html  refmap_listest1_analysis_cforest_PtANotice.Rmd  refmap_listest1_analysis_cforest_PtANotice.nb.html  refmap_listest1_analysis_cforest_PtB.Rmd  refmap_listest1_analysis_cforest_PtB.nb.html  refmap_listest1_analysis_cforest_PtsAB.Rmd  refmap_listest1_analysis_cforest_PtsAB.nb.html  refmap_listest1_analysis_cforest_PtsAB_R1.Rmd  refmap_listest1_analysis_cforest_PtsAB_R1.nb.html  refmap_listest1_analysis_dabest.Rmd  refmap_listest1_analysis_dabest.nb.html  refmap_listest1_analysis_final_models.Rmd  refmap_listest1_analysis_gee.Rmd  refmap_listest1_analysis_gee_R1.Rmd  refmap_listest1_analysis_glme.Rmd  refmap_listest1_analysis_glmm_mixed_stimuli.Rmd  refmap_listest1_analysis_irr.Rmd  refmap_listest1_analysis_lme.Rmd  refmap_listest1_analysis_nlme_qrnlmm.Rmd  refmap_listest1_analysis_pca_PtsAB.Rmd  refmap_listest1_analysis_updated_final_models.Rmd  refmap_listest1_gee_glmm_models_rev2.Rmd  refmap_listest1_gee_glmm_models_rev3.Rmd  refmap_listest1_gee_models_rev2.Rmd  refmap_listest2_analysis_cforest.Rmd
src/mlab/: audio_caltnc.m  fft_aspec.asv  fft_aspec.m  findColumnOneIndices.m  fweight_Xf.asv  fweight_Xf.m  loud_norm_tvar.asv  loud_norm_tvar.m  noctSpec2TimeSeries.m  noctf.m  rfft_aspec.m  setLoudness.m  signalSegment.m  signalSegment_.m  son_qual_tvar.m  sqm_tvar.asv  sqm_tvar.m
src/mlab/ECMA_418-2/: LowPass.m  acousticHMSLoudness.m  acousticHMSLoudnessFromComponent.m  acousticHMSRoughness.m  acousticHMSTonality.asv  acousticHMSTonality.m  acousticSHMFluctuation.m  acousticSHMLoudness.m  acousticSHMLoudnessFromComponent.m  acousticSHMPartialLoudness.m  acousticSHMPartialTonality.m  acousticSHMRoughness.m  acousticSHMTonality.m
src/mlab/Live_script/: ISO5323_sinusoids.mlx  PartialLoudnessComparison.mlx  QuasiLoudnessEarFilter.mlx  QuasiLoudnessTransform.mlx  RefMap_LabTest2_recording_calibration.mlx  SQM_calcs.mlx  SQM_calcs_exp1.mlx  SQM_calcs_exp2.mlx  SQM_tonal_dev.mlx
src/mlab/Metrics/: acousticDetectDiscntFromLeqf.m  acousticDetectDiscount.m  acousticDetectFromLeqf.m  acousticDetectability.m  acousticImpuls.m  acousticLoudQuasiZwicker.m  acousticLoudQuasiZwickerWav.m  acousticPsychAnnoy.m  acousticQuasiLoudZwicker.m  acousticQuasiLoudZwickerWav.m  acousticSharpFromQuasiLoud.m  acousticSharpFromQuasiZwicker.m  acousticSharpFromSHMLoud.m  acousticSharpQuasiLoudWav.m  acousticSharpnessFromSHMLoud.m  acousticSharpnessSHM.m  acousticTonalSharpFromSHMTonalLoud.m  acousticTonalSharpnessSHM.m  auralDetectFromLeq.m  auralDetectability.m  loudNweighting.m  sharpnessQuasiLoudWav.m  spectralBrightness.m
src/mlab/PU_Colormaps/: magma_cmap.txt  plasma_cmap.txt
src/py/: __init__.py  metrics.py  soundscene_analysis.py
src/py/dsp/: __init__.py  acousticHMS.py  acousticSHMSubs.py  f_weight_T.py  fft_tools.py  filterFuncs.py  noct.py
src/py/metrics/: __init__.py  detectability.py
src/py/notebooks/: refmap_listest1_analysis_EDA_alldata.ipynb  refmap_listest1_analysis_EDA_check+sample.ipynb  refmap_listest1_analysis_EDA_partA.ipynb  refmap_listest1_analysis_EDA_partA_ParamSel.ipynb  refmap_listest1_analysis_EDA_partB.ipynb  refmap_listest1_analysis_SQA.ipynb
src/py/scripts/: refmap_listest1_analysis.py  refmap_listest1_postprocess.py  refmap_listest1_postprocess_rev1.py
src/py/utils/: __init__.py  load_in.py
src/refmap_psychoacoustics/: __init__.py  soundscene_analysis.py
validation/: SpecTAggPlot.m  SpecTDepPlot.m  TDepPlot.m
validation/ECMA-418-2/: README.md
validation/ECMA-418-2_2022/: README.md  validation_ECMA-418-2_2022.hppj
(+225 files in other folders)
