[project]
name = "refmap-psychoacoustics"
version = "0.1.0"
description = "REFMAP project task 4.3: Psychoacoustics of sound from unmanned aircraft systems (UAS) / unmanned aerial vehicles (UAVs), and urban air mobility (UAM)"
authors = [{ name = "Mike Lotinga", email = "m.j.lotinga@edu.salford.ac.uk" }]
requires-python = "~=3.11"
readme = "README.md"
license = "AGPL-3.0-only"
dependencies = [
    "numpy>=1.26.3,<2",
    "pandas>=2.1.4,<3",
    "SciPy>=1.11.4,<2",
    "matplotlib>=3.8.2,<4",
    "statsmodels>=0.14.1,<0.15",
    "librosa>=0.10.1,<0.11",
    "openpyxl>=3.1.2,<4",
    "XlsxWriter>=3.1.9,<4",
    "bambi>=0.13.0,<0.14",
    "PySoundFile>=0.9.0.post1,<0.10",
    "seaborn>=0.13.1,<0.14",
    "scikit-learn>=1.3.2,<2",
    "mosqito>=1.1.0,<2",
    "ffmpeg~=1.4",
    "pyqt5-qt5==5.15.2",
    "pyqtwebengine-qt5==5.15.2",
    "torch>=2.1.2,<3",
    "torchvision>=0.16.2,<0.17",
    "torchaudio>=2.1.2,<3",
    "guidata>=3.2.2,<4",
    "matlabengine==23.2.3 ; python_version >= '3.11' and python_version < '3.12'",
    "pingouin>=0.5.4,<0.6",
    "parallel-pandas>=0.6.4,<0.7",
    "bottleneck>=1.4.2,<2",
    "scienceplots>=2.1.1,<3",
    "acoustic-toolbox>=0.1.2,<0.2",
]

[dependency-groups]
dev = [
    "spyder>=5.5.0,<6",
    "jupyter>=1.0.0,<2",
    "addcopyfighandler>=3.2.0,<4",
    "spyder-notebook>=0.5.1,<0.6",
    "spyder-kernels>=2.5.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
