[project]
name = "refmap-psychoacoustics"
version = "0.1.0"
description = "REFMAP project task 4.3: Psychoacoustics of sound from unmanned aircraft systems (UAS) / unmanned aerial vehicles (UAVs), and urban air mobility (UAM)"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "Mike Lotinga", email = "m.j.lotinga@edu.salford.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "acoustic-toolbox>=0.1.2",
    "bottleneck>=1.6.0",
    "guidata>=3.12.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "mosqito>=1.2.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pingouin>=0.5.5",
    "pip>=25.2",
    "pyeq3>=12.6.1",
    "pyfftw>=0.15.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "pyqt6>=6.9.1",
    "python-calamine>=0.5.4",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "snakeviz>=2.2.2",
    "spyder-kernels>=3.0.5",
]
