[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["Mike Lotinga <m_lotinga@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
